--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap-vue": "^2.0.0-rc.18",
+    "install": "^0.12.2",
     "jquery": "^3.4.0",
     "lodash": "^4.17.11",
+    "npm": "^6.9.0",
+    "popper.js": "^1.15.0",
     "postcss-cli": "^6.1.2",
+    "postcss-scss": "^2.0.0",
     "pug": "^2.0.3",
+    "sass": "^1.18.0",
+    "style-loader": "^0.23.1",
     "swiper": "^4.5.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
@@ -52,10 +60,12 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "webpack": "3.12.0",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-dev-server": "2.11.2",
+    "webpack-hot-middleware": "2.22.2",
+    "webpack-merge": "4.1.3",
+    "webpack-vendor-chunk-plugin": "1.0.0"
   },
   "engines": {
     "node": ">= 6.0.0",
